2015-12-13  Daniel Hawkins
    * server/skill_util.c: Fix phantom miss messages that should occur only with [Fire]+attack.

2015-12-12	Daniel Hawkins
	* doc/Makefile.am: Add build target for making documentation archive
	  with new dynamically generated spell lists.
	* doc/spell-docs/Makefile.am: Add build target for dynamic generation of spell lists.
	  Also, clean up the EXTRA_DIST declaration.
	* doc/spell-docs/spell-lists.pl: Added a perl script to dynamically generate spell lists.
	* doc/spell-docs/README: Updated to mention effort to upgrade docs.
	* doc/spell-docs/prayer-list.ps: Removed. Now dynamically generated from spell-lists.pl.
	* doc/spell-docs/prayer-list.txt: Removed. Now dynamically generated from spell-lists.pl.
	* doc/spell-docs/spell-list.ps: Removed. Now dynamically generated from spell-lists.pl.

2015-12-11	Daniel Hawkins
	* doc/scripts/bonus-extract.pl: Refactor old bonus-extract,
	  replacing it with a perl script that gets the bonuses from
	  stat_bonus.
	* doc/playbook-html/Makefile.am: Change the bonus.html build target to run the new script.
	* doc/playbook-html/bonus-extract: Removed.
	* doc/playbook/Makefile.am: Change the bonus.tex build target to run the new script.
	* doc/playbook/bonus-extract: Removed.

2015-12-10	Daniel Hawkins
	* server/account.c: Add [ to the blocked characters.
	  It causes improper message printing on the client side.
	  This does not effect existing characters, only new ones.

2015-12-09	Kevin Zheng
	* socket/info.c: Log messages that are broadcast to all players

2015-12-07	Daniel Hawkins
	* doc/scripts/gods-extract.pl: Refactor old gods-extract AWK scripts into a perl script.
	  While we're here, also reimplement protections, immunities, and vulnerabilities.
	* doc/playbook-html/Makefile.am: Point to the new gods-extract script.
	* doc/playbook-html/gods-extract: Removed.
	* doc/playbook/Makefile.am: Point to the new gods-extract script.
	* doc/playbook/gods-extract: Removed.

2015-12-06  Nicolas Weeger