@@ -1,10 +1,12 @@
-EXTRA_DIST = README spell-info.ps spell-summary.ps \
-	tome-of-magic.ps spell-info.txt	tome-of-magic.txt
+EXTRA_DIST = README spell-summary.ps tome-of-magic.ps
 
 PERL=@PERL@
 CROSSBIN=../../server/crossfire-server
 
 CLEANFILES=spell-list.txt spell-list.ps prayer-list.txt prayer-list.ps
 
-spell-docs:
-	$(PERL) spell-lists.pl "$(CROSSBIN) -m4" spell-list prayer-list
+spell-docs: spell-info.txt tome-of-magic.txt prayer-list.txt spell-list.txt
+	$(SHELL) create_ps.sh
+
+spell-list.txt prayer-list.txt: spell-lists.pl
+	$(PERL) spell-lists.pl "$(CROSSBIN) -m4" spell-list.txt prayer-list.txt
