@@ -1,162 +1,0 @@
-%!PS-Adobe-1.0
-%%Creator: offa:chrisc (Christopher Carpinello)
-%%Title: spell-info.txt
-%%CreationDate: Fri Mar 26 17:01:35 1993
-%%DocumentFonts: Courier-Bold Courier-BoldOblique
-% Start of enscript.pro -- prolog for text file translator
-% Copyright (c) 1984,1985,1987 Adobe Systems Incorporated. All Rights Reserved. 
-% GOVERNMENT END USERS: See Notice file in TranScript library directory
-% -- probably /usr/lib/ps/Notice
-% RCSID: $Header$
-save/EnscriptJob exch def
-/StartEnscriptDoc{$enscript begin}def
-/$enscript 50 dict def $enscript begin
-/EndEnscriptDoc{end}def
-/S/show load def
-/X{exch 0 rmoveto S}def
-/Y{exch 0 exch rmoveto S}def
-/B{3 1 roll moveto S}def
-/F{$fd exch get setfont}def
-/StartPage{/svpg save def .05 dup scale}def
-/EndPage{svpg restore showpage}def
-/DoPreFeed{/statusdict where{pop
- statusdict/prefeed known{statusdict exch/prefeed exch put 0}if}if pop}def
-/Landscape{90 rotate 0 -15840 translate}def
-/SetStTime{statusdict /manualfeedtimeout 120 put} def
-/SetStatus{statusdict /manualfeed true put
-   statusdict /product get (LaserWriter) eq 
-   {version (23.0) eq  % Don't redefine EndPage if printer is not "Classic LW"
-     {/EndPage {svpg restore
-	 {statusdict /printerstatus get exec 16#22000000 and 0 eq{exit}if}loop
-	 showpage}def}if }if}def
-
-/ISO-Latin-1 [
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/space /exclam   /quotedbl   /numbersign   /dollar  /percent  /ampersand
-/quoteright /parenleft   /parenright  /asterisk   /plus  /comma  /hyphen
-/period /slash  /zero /one  /two /three  /four /five  /six /seven /eight
-/nine /colon /semicolon /less /equal /greater /question /at /A  /B /C /D
-/E /F /G /H /I /J /K  /L /M  /N /O  /P /Q  /R /S  /T /U  /V /W  /X /Y /Z
-/bracketleft /backslash     /bracketright    /asciicircum    /underscore
-/quoteleft /a /b /c /d /e /f /g /h /i /j /k /l /m /n /o  /p /q  /r /s /t
-/u /v  /w  /x  /y  /z  /braceleft /bar  /braceright /asciitilde /.notdef
-/dotlessi /dieresis/ring    /grave   /acute    /circumflex/tilde /macron
-/brev  /dotaccent /cedilla /.notdef /.notdef  /.notdef /.notdef /.notdef
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/.notdef /.notdef /.notdef /.notdef /.notdef  /.notdef /.notdef /.notdef
-/space /exclamdown /cent /sterling /currency /yen /brokenbar /section
-/dieresis /copyright /ordfeminine /guillemotleft /logicalnot /endash /registered 
-/macron /degree /plusminus /twosuperior /threesuperior /acute /mu
-/paragraph /bullet /cedilla /onesuperior /ordmasculine /guillemotright
-/onequarter /onehalf /threequarters /questiondown /Agrave /Aacute /Acircumflex
-/Atilde /Adieresis /Aring /AE /Ccedilla /Egrave /Eacute /Ecircumflex
-/Edieresis /Igrave /Iacute /Icircumflex /Idieresis /Eth /Ntilde
-/Ograve /Oacute /Ocircumflex /Otilde /Odieresis /multiply /Oslash /Ugrave
-/Uacute /Ucircumflex /Udieresis /Yacute /Thorn /germandbls /agrave
-/aacute /acircumflex /atilde /adieresis /aring /ae /ccedilla /egrave
-/eacute /ecircumflex /edieresis /igrave /iacute /icircumflex /idieresis
-/eth /ntilde /ograve /oacute /ocircumflex /otilde /odieresis
-/divide /oslash /ugrave /uacute /ucircumflex /udieresis /yacute
-/thorn /ydieresis ] def
-
-/SetUpFonts
- {dup/$fd exch array def{
-     findfont dup maxlength dict begin
-	{ 1 index /FID ne { def } { pop pop } ifelse } forall
-	/Encoding ISO-Latin-1 def
-	/FontName /Null def
-	FontName currentdict definefont
-     end
-     exch scalefont $fd 3 1 roll put}repeat}def
-
-/InitGaudy{/TwoColumn exch def /BarLength exch def
- /ftD /Times-Bold findfont 12 UP scalefont def
- /ftF /Times-Roman findfont 14 UP scalefont def
- /ftP /Helvetica-Bold findfont 30 UP scalefont def}def
-/U{1440 mul}def
-/UP{U 72 div}def
-/LB{/pts exch UP def /charcolor exch def /boxcolor exch def /font exch def
- /label exch def /dy exch def /dx exch def /lly exch def /llx exch def
- gsave boxcolor setgray
- llx lly moveto dx 0 rlineto 0 dy rlineto dx neg 0 rlineto closepath fill
- /lines label length def
- /yp lly dy add dy lines pts mul sub 2 div sub pts .85 mul sub def
- font setfont charcolor setgray
- label {dup stringwidth pop 2 div llx dx 2 div add exch sub yp moveto show
-   /yp yp pts sub def}forall grestore}def
-/Gaudy{/Page exch def /Date exch def /File exch def /Comment exch def
- .25 U 10.2 U BarLength .1 sub U .25 U [File] ftF .97 0 14 LB
- .25 U 10.45 U BarLength .1 sub U .25 U [Comment] ftF 1 0 14 LB
- .25 U 10.2 U 1 U .5 U Date ftD .7 0 12 LB
- BarLength .75 sub U 10.2 U 1 U .5 U [Page] ftP .7 1 30 LB
- TwoColumn{BarLength 2 div .19 add U 10.2 U moveto 0 -10 U rlineto stroke}if
-}def
-end
-StartEnscriptDoc % end fixed prolog
-1 160 /Courier-Bold
-0 240 /Courier-BoldOblique
-2 SetUpFonts
-%%EndProlog
-%%Page: ? 1
-StartPage
-0 F
-900 14940(Level)B
-900 14680(=====)B
-2052 14160(The level of a spell indicates the difficulty of the spell as)B
-900 13900(well as defining how advanced a spell-user must be before he may fully)B
-900 13640(grasp the knowledge to cast the spell.)B
-900 12860(Type)B
-900 12600(====)B
-2052 12080(A spell is either a wizard based or priest based spell.)B
-900 11820(Anyone except a cleric or priest attempting to cast a priest based)B
-900 11560(spell \(a prayer\) will not receive a Wisdom bonus to successfully cast)B
-900 11300(the spell \(and has a high chance of fumbling the spell unless the)B
-900 11040(caster has an unusally inherent high Wisdom\).)B
-900 10260(Speed)B
-900 10000(=====)B
-2052 9480(The speed \(in game rounds\) determines how long it takes to)B
-900 9220(cast such a spell.  The lower the speed, the faster the spell may be)B
-900 8960(cast.)B
-900 8180(Range)B
-900 7920(=====)B
-2052 7400(The range of a spell limits how far reaching the spell will)B
-900 7140(effectively work.  The range of a spell is usually denoted in 10' \(one)B
-900 6880(sqaure\) increments.  Thus a spell with a range of 1 will only affect)B
-900 6620(those play squares surrounding the caster.  Furthermore, there are)B
-900 6360(several other common ranges:)B
-2052 5840(When a spell has a range of "self", only the caster may be)B
-900 5580(affected by the spell.)B
-2052 5060(The most common spell range is that of "touch".  This denotes)B
-900 4800(that the caster much touch the recipient of the spell in order to)B
-900 4540(release the spell effects \(as for "self", the caster may cast the)B
-900 4280(spell on himself\).)B
-2052 3760(A "special" range for missile spells indicates that the spell)B
-900 3500(will last until it impacts an object \(a PC, monster, or wall\).  For)B
-900 3240(cone spells, it usually denotes that the range depends on some)B
-900 2980(modifer, such as the caster's Wisdom level.  If this is the case, it)B
-900 2720(will be stated in the long spell description.)B
-900 1940(Duration)B
-900 1680(========)B
--520(The duration of a spell \(expressed in game rounds\) indicates)Y
-900 900(how long the effects of the spell will last.  Several common ranges are:)B
-EndPage
-%%Page: ? 2
-StartPage
-0 F
-2052 14940("instant" duration spells have effects which are noticeable)B
-900 14680(immediately.  Cone spells with an "instant" duration indicate that the)B
-900 14420(effects of the cone do not linger on game squares more than 1 round.)B
-2052 13900(The "standard" duration for spells is 500 rounds.)B
-2052 13380(A "permanent" duration is forever.)B
-2052 12860("special" durations last until a specific event occurs, or the)B
-900 12600("standard" duration for the spell expires.  Only one protection or)B
-900 12340(change player attribute spell may be in effect on a player at any one)B
-900 12080(time.  If another such spell is cast upon a player, then the modifiers)B
-900 11820(of the previous spell are replaced by those of the new spell.)B
-EndPage
-%%Trailer
-EndEnscriptDoc
-EnscriptJob restore
