@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 
 #
-# Takes the server spell list and parses them into text and postscript documents.
+# Takes the server spell list and parses them into text documents.
 # Designed to use the server dump of spells, so it should be easier than parsing arches.
 #
 # Author: Daniel Hawkins
@@ -11,7 +11,6 @@ use strict;
 
 if ($#ARGV lt 2){
 	print "Usage: spell-lists.pl [server command] [spell list file] [prayer list file]\n";
-	print "            The spell and prayer files should be supplied without an extension.\n";
 	die("Not enough arguments");
 }
 
@@ -41,7 +40,7 @@ my $i;
 my @sorted_spells = &sort(\@spell_list_level, \@spell_list_name);
 my @sorted_prayers = &sort(\@prayer_list_level, \@prayer_list_name);
 
-open(SPELLS, "> $ARGV[1].txt") or die("Failed to open $ARGV[1].txt for output");
+open(SPELLS, "> $ARGV[1]") or die("Failed to open $ARGV[1] for output");
 for ($i = 0; $i < $#sorted_spells; ++$i){
 	if ($sorted_spells[$i]){
 		print SPELLS "level $i\n";
@@ -50,7 +49,7 @@ for ($i = 0; $i < $#sorted_spells; ++$i){
 	}
 }
 close(SPELLS);
-open(PRAYERS, "> $ARGV[2].txt") or die("Failed to open $ARGV[2].txt for output");
+open(PRAYERS, "> $ARGV[2]") or die("Failed to open $ARGV[2] for output");
 for ($i = 0; $i < $#sorted_prayers; ++$i){
 	if ($sorted_prayers[$i]){
 		print PRAYERS "level $i\n";
@@ -60,18 +59,6 @@ for ($i = 0; $i < $#sorted_prayers; ++$i){
 }
 close(PRAYERS);
 
-# Do postscript output. Check for enscript to start.
-`enscript --version`;
-if ($? eq 0){
-	# We have enscript, so make postscript output.
-	# First, do spells
-	`enscript -2 -b "Crossfire Spells" -p "$ARGV[1].ps" -f "ZapfChancery-MediumItalic12" -F "ZapfChancery-MediumItalic13" "$ARGV[1].txt"`;
-	# Second, do 
-	`enscript -2 -b "Crossfire Prayers" -p "$ARGV[2].ps" -f "ZapfChancery-MediumItalic12" -F "ZapfChancery-MediumItalic13" "$ARGV[2].txt"`;
-}
-else{
-	print STDERR "Cannot make PostScript spell lists; enscript not found.\n";
-}
 
 # Use a bin sort here to sort them.
 #
